model export added

--- a/single_model_SSD_Fast_RCNN.ipynb
+++ b/single_model_SSD_Fast_RCNN.ipynb
@@ -451,6 +451,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Saving...\n",
+      "INFO:tensorflow:Assets added to graph.\n",
+      "INFO:tensorflow:No assets to write.\n",
+      "INFO:tensorflow:SavedModel written to: /Users/vedanshu/tfrecord/saved_model/saved_model.pb\n",
+      "Ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "with connected_graph.as_default():\n",
+    "    print('\\nSaving...')\n",
+    "    cwd = os.getcwd()\n",
+    "    path = os.path.join(cwd, 'saved_model')\n",
+    "    shutil.rmtree(path, ignore_errors=True)\n",
+    "    inputs_dict = {\n",
+    "        \"image_tensor\": tf_input\n",
+    "    }\n",
+    "    outputs_dict = {\n",
+    "        \"detection_boxes_l1\": tf_boxes_l1,\n",
+    "        \"detection_scores_l1\": tf_scores_l1,\n",
+    "        \"max_num_detection\": tf_max_num_detection,\n",
+    "        \"detection_boxes_l2\": tf_boxes_l2,\n",
+    "        \"detection_scores_l2\": tf_scores_l2\n",
+    "    }\n",
+    "    tf.saved_model.simple_save(\n",
+    "        tf_sess_main, path, inputs_dict, outputs_dict\n",
+    "    )\n",
+    "    print('Ok')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
